--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
-    "semantic-release": "^15.13.30"
+    "proxyquire": "^2.1.3",
+    "semantic-release": "^15.13.30",
+    "sinon": "^7.5.0"
   },
   "dependencies": {
     "fs-readdir-recursive": "^1.1.0",
+    "gitlog": "^3.1.2",
     "lodash": "^4.17.15",
-    "proxyquire": "^2.1.3",
     "require-all": "^3.0.0",
-    "sinon": "^7.5.0",
     "yargs": "^14.2.0"
   },
   "nyc": {
