--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "chalk": "^3.0.0",
     "fs-readdir-recursive": "^1.1.0",
     "gitlog": "^3.1.2",
+    "ignore": "^5.1.4",
     "lodash": "^4.17.15",
     "require-all": "^3.0.0",
     "yargs": "^14.2.0"
